--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,6 +21,10 @@ jobs:
 
     - uses: actions/checkout@v3
 
+    - name: Run Gosec Security Scanner
+        uses: securego/gosec@master
+        with:
+          args: ./...
 
     - name: Build
       run: go build -v ./...
@@ -30,11 +34,6 @@ jobs:
       with:
         version: latest
 
-    - name: Run Gosec Security Scanner
-      run: |
-        export PATH=$PATH:$(go env GOPATH)/bin
-        go get github.com/securego/gosec/cmd/gosec
-        gosec ./...
 
     - name: Test
       run: go test -v ./...
